# KernelBlaster

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  compose.yaml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: blocker.yml  config.yml
.github/workflows/: cpu-ci.yml  docs-sync.yml  gpu-validation.yml
artifacts/portfolio-v1.0/: README.md  SHA256SUMS.json
artifacts/portfolio-v1.0/environment/: environment.json
artifacts/portfolio-v1.0/manifests/: analysis-output-SHA256SUMS.json  core10_rtx3080_SHA256SUMS.json  core10_rtx3080_raw_sha256.csv  raw_artifact_sha256.csv
artifacts/portfolio-v1.0/reports/: core10-rtx3080-comparison.zh-CN.md  core10-rtx3080-summary.en.md  validation-report.zh-CN.md  validation-summary.en.md
artifacts/portfolio-v1.0/results/: analysis_summary.json  api_usage.csv  core10_results.csv  core10_rtx3080_comparison.csv  core10_rtx3080_comparison.json  deep_case_results.csv  failure_classification.csv  pytorch_core10_rtx3080.csv
artifacts/portfolio-v2.0/: SHA256SUMS.json
artifacts/portfolio-v2.0/core10/: core10-rtx3080-confirmation.en.md  core10-rtx3080-confirmation.zh-CN.md  core10_rtx3080_SHA256SUMS.json  core10_rtx3080_comparison.csv  core10_rtx3080_comparison.json
artifacts/portfolio-v2.0/reports/: rtx3080-targeted-validation.en.md  rtx3080-targeted-validation.zh-CN.md
artifacts/portfolio-v2.0/results/: rtx3080_targeted_validation.json
artifacts/portfolio-v2.1/: SHA256SUMS.json
artifacts/portfolio-v2.1/issue-10/rtx3080/: correctness-summary.json
artifacts/portfolio-v2.1/issue-7/rtx3080/: trusted-pilot-summary.json
artifacts/portfolio-v2.1/issue-8/rtx3080/: ncu-preflight-summary.json
data/: kernelbench_cuda.py
data/kernelbench-cuda/: README.md
data/kernelbench-cuda/level1/001_Square_matrix_multiplication/: init.cu
data/kernelbench-cuda/level1/002_Standard_matrix_multiplication/: init.cu
data/kernelbench-cuda/level1/003_Batched_matrix_multiplication/: init.cu
data/kernelbench-cuda/level1/004_Matrix_vector_multiplication/: init.cu
data/kernelbench-cuda/level1/005_Matrix_scalar_multiplication/: init.cu
data/kernelbench-cuda/level1/007_Matmul_with_small_K_dimension/: init.cu
data/kernelbench-cuda/level1/008_Matmul_with_irregular_shapes/: init.cu
data/kernelbench-cuda/level1/009_Tall_skinny_matrix_multiplication/: init.cu
data/kernelbench-cuda/level1/010_3D_tensor_matrix_multiplication/: init.cu
data/kernelbench-cuda/level1/011_4D_tensor_matrix_multiplication/: init.cu
data/kernelbench-cuda/level1/012_Matmul_with_diagonal_matrices/: init.cu
data/kernelbench-cuda/level1/013_Matmul_for_symmetric_matrices/: init.cu
data/kernelbench-cuda/level1/014_Matmul_for_upper_triangular_matrices/: init.cu
data/kernelbench-cuda/level1/015_Matmul_for_lower_triangular_matrices/: init.cu
data/kernelbench-cuda/level1/016_Matmul_with_transposed_A/: init.cu
data/kernelbench-cuda/level1/017_Matmul_with_transposed_B/: init.cu
data/kernelbench-cuda/level1/018_Matmul_with_transposed_both/: init.cu
data/kernelbench-cuda/level1/019_ReLU/: init.cu
docker/: Dockerfile  Dockerfile.gpu  compose.worker.yml  entrypoint.sh  requirements.gpu.txt  requirements.txt
docs/: measurement-status-contract.md  measurement-status-contract.zh-CN.md
docs/figures/: README.md  README.zh-CN.md
docs/portfolio/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  rmsnorm-case-study.md  rmsnorm-case-study.zh-CN.md  validation.md  validation.zh-CN.md
docs/schemas/: measurement-v3.schema.json
portfolio/: status.json
portfolio/case_studies/core10/: 004_matvec_sm86.cu  007_small_k_matmul_cublas.cu  019_relu_sm86.cu  023_softmax_sm86.cu  026_gelu_sm86.cu  040_layernorm_sm86.cu  047_sum_sm86.cu  088_mingpt_gelu_sm86.cu  095_cross_entropy_sm86.cu  candidates.json
portfolio/case_studies/rmsnorm/: README.md  best_rmsnorm_sm86.cu  edge_driver.cpp
portfolio/suites/: core10.json  pilot3.json  rmsnorm.json
scripts/: analyze_core10_comparison.py  analyze_portfolio.py  benchmark_candidates.py  benchmark_cuda.py  benchmark_pytorch.py  benchmark_suite.py  build_portfolio_v2_1_evidence.py  check_dco.py  check_runtime_versions.py  collect_environment.py  container.sh  run-with-metadata.sh  run_RL.py  run_portfolio.py  run_single_kernelblaster.sh  run_trusted_pilot.py  smoke_llm.py  start_gpu_worker.py  sync_portfolio_docs.py
src/kernelblaster/: GUIDE.zh-CN.md  __init__.py  benchmarking.py  measurements.py  outcomes.py  profiling.py  result_analysis.py
src/kernelblaster/agents/: __init__.py  database.py  feedback.py  opt_ncu_rl.py  reprofile.py  rl_agents.py
src/kernelblaster/config/: __init__.py  config.py  gpu_config.py
src/kernelblaster/graph/: __init__.py  graph.py  state.py
src/kernelblaster/llm/: __init__.py  base.py  factory.py  openai_compatible.py
src/kernelblaster/observability/: __init__.py  context.py  recorder.py
src/kernelblaster/portfolio/: __init__.py  capabilities.py  suite.py
src/kernelblaster/resources/: __init__.py  client.py  servers.py
src/kernelblaster/servers/: __init__.py  auth.py  compile.py  gpu.py  management.py  security.py  serve_api.py  server_logging.py
src/kernelblaster/servers/cuda_env/: CMakeLists.txt  correctness_metrics.h
src/kernelblaster/workflow/: __init__.py  workflow.py
tests/benchmarking/: test_benchmark_suite.py  test_benchmarking.py  test_candidate_only_correctness.py  test_core10_runners.py  test_correctness_gates.py  test_ncu_runner.py
tests/core/: test_gpu_config.py  test_measurements.py  test_trusted_outcomes.py
tests/llm/: test_openai_compatible.py
tests/observability/: test_recorder.py
tests/portfolio/: test_capabilities.py  test_resource_hardening.py  test_resource_lifecycle_drivers.py  test_run_portfolio.py  test_suite.py
tests/result_analysis/: test_result_analysis.py
tests/scripts/: test_build_portfolio_v2_1_evidence.py  test_collect_environment.py  test_run_rl.py  test_run_trusted_pilot.py  test_start_gpu_worker.py  test_sync_portfolio_docs.py
tests/security/: test_worker_security.py
(+214 files in other folders)
